<resources>
    <string name="app_name">Funny Question</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin</string>
    <string name="nav_header_subtitle">Admin@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_QR">QR Scan</string>
    <string name="menu_Game">Game</string>

    <string name="tv_QR_Result">QR Result</string>
    <string name="tv_Result_values">Result values</string>

    <string name="tv_Last_Score">Last Score</string>
    <string name="btn_Play_Again">Play Again</string>
    <string name="btn_Home">Home</string> _
    <string name="tv_High_Score">High Score</string>
    <string name="tv_score">score:</string>
    <string name="tv_Question1">Question1</string>
    <string name="tv_Content_question1">Content question1</string>
    <string name="tv_Anwser1">Anwser1</string>
    <string name="tv_Anwser2">Anwser2</string>
    <string name="tv_Anwser3">Anwser3</string>
    <string name="tv_Anwser4">Anwser4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>