<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutgame"
    tools:context=".Fragment1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btnhighscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_High_Score"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/tvscore"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/tv_score" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_content_question"
                android:textSize="20sp"
                android:paddingTop="40dp"
                android:paddingBottom="40dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:background="@drawable/blue_background"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/tv_Content_question1"
                />
            <TextView
                android:id="@+id/tv_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_Question1"
                android:background="@drawable/orange_background"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>
        <TextView
            android:id="@+id/tv_answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_Anwser1"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/blue_background"/>
        <TextView
            android:id="@+id/tv_answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_Anwser2"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/blue_background"/>
        <TextView
            android:id="@+id/tv_answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_Anwser3"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/blue_background"/>
        <TextView
            android:id="@+id/tv_answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_Anwser4"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/blue_background"/>
    </LinearLayout>

</ScrollView>